parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> effect COLON COLON playSequence
Rule 2     effect -> ID effectDevice
Rule 3     effect -> ID effectDevice effect
Rule 4     effectDevice -> mouseEffect
Rule 5     effectDevice -> keyboardEffect
Rule 6     mouseEffect -> MOUSE mouseEffectType
Rule 7     keyboardEffect -> KEYBOARD keyboardEffectType
Rule 8     mouseEffectType -> STATIC staticArguments
Rule 9     mouseEffectType -> BLINK blinkArguments
Rule 10    mouseEffectType -> SPECTRUM spectrumArguments
Rule 11    mouseEffectType -> CUSTOM customMouseArguments
Rule 12    keyboardEffectType -> STATIC staticArguments
Rule 13    keyboardEffectType -> BLINK blinkArguments
Rule 14    keyboardEffectType -> SPECTRUM spectrumArguments
Rule 15    keyboardEffectType -> CUSTOM customKeyboardArguments
Rule 16    keyboardEffectType -> WAVE waveArguments
Rule 17    keyboardEffectType -> BREATHE breatheArguments
Rule 18    keyboardEffectType -> REACT reactArguments
Rule 19    keyboardEffectType -> STARLIGHT starlightArguments
Rule 20    staticArguments -> color
Rule 21    blinkArguments -> NUMBER NUMBER colors
Rule 22    spectrumArguments -> NUMBER
Rule 23    waveArguments -> direction
Rule 24    direction -> L2R
Rule 25    direction -> R2L
Rule 26    breatheArguments -> breatheType colors
Rule 27    breatheArguments -> breatheType
Rule 28    reactArguments -> reactType color
Rule 29    starlightArguments -> NUMBER color
Rule 30    customMouseArguments -> zone color
Rule 31    customMouseArguments -> zone color customMouseArguments
Rule 32    customKeyboardArguments -> key color
Rule 33    customKeyboardArguments -> key color customKeyboardArguments
Rule 34    zone -> TOP
Rule 35    zone -> MIDDLE
Rule 36    zone -> BOTTOM
Rule 37    key -> RZKEY_ESC
Rule 38    key -> RZKEY_F1
Rule 39    key -> RZKEY_F2
Rule 40    key -> RZKEY_F3
Rule 41    key -> RZKEY_F4
Rule 42    key -> RZKEY_F5
Rule 43    key -> RZKEY_F6
Rule 44    key -> RZKEY_F7
Rule 45    key -> RZKEY_F8
Rule 46    key -> RZKEY_F9
Rule 47    key -> RZKEY_F10
Rule 48    key -> RZKEY_F11
Rule 49    key -> RZKEY_F12
Rule 50    key -> RZKEY_1
Rule 51    key -> RZKEY_2
Rule 52    key -> RZKEY_3
Rule 53    key -> RZKEY_4
Rule 54    key -> RZKEY_5
Rule 55    key -> RZKEY_6
Rule 56    key -> RZKEY_7
Rule 57    key -> RZKEY_8
Rule 58    key -> RZKEY_9
Rule 59    key -> RZKEY_0
Rule 60    key -> RZKEY_A
Rule 61    key -> RZKEY_B
Rule 62    key -> RZKEY_C
Rule 63    key -> RZKEY_D
Rule 64    key -> RZKEY_E
Rule 65    key -> RZKEY_F
Rule 66    key -> RZKEY_G
Rule 67    key -> RZKEY_H
Rule 68    key -> RZKEY_I
Rule 69    key -> RZKEY_J
Rule 70    key -> RZKEY_K
Rule 71    key -> RZKEY_L
Rule 72    key -> RZKEY_M
Rule 73    key -> RZKEY_N
Rule 74    key -> RZKEY_O
Rule 75    key -> RZKEY_P
Rule 76    key -> RZKEY_Q
Rule 77    key -> RZKEY_R
Rule 78    key -> RZKEY_S
Rule 79    key -> RZKEY_T
Rule 80    key -> RZKEY_U
Rule 81    key -> RZKEY_V
Rule 82    key -> RZKEY_W
Rule 83    key -> RZKEY_X
Rule 84    key -> RZKEY_Y
Rule 85    key -> RZKEY_Z
Rule 86    key -> RZKEY_NUMLOCK
Rule 87    key -> RZKEY_NUMPAD
Rule 88    key -> RZKEY_NUMPAD2
Rule 89    key -> RZKEY_NUMPAD3
Rule 90    key -> RZKEY_NUMPAD4
Rule 91    key -> RZKEY_NUMPAD5
Rule 92    key -> RZKEY_NUMPAD6
Rule 93    key -> RZKEY_NUMPAD7
Rule 94    key -> RZKEY_NUMPAD8
Rule 95    key -> RZKEY_NUMPAD9
Rule 96    key -> RZKEY_NUMPAD_DIVIDE
Rule 97    key -> RZKEY_NUMPAD_MULTIPLY
Rule 98    key -> RZKEY_NUMPAD_SUBTRACT
Rule 99    key -> RZKEY_NUMPAD_ADD
Rule 100   key -> RZKEY_NUMPAD_ENTER
Rule 101   key -> RZKEY_NUMPAD_DECIMAL
Rule 102   key -> RZKEY_PRINTSCREEN
Rule 103   key -> RZKEY_SCROLL
Rule 104   key -> RZKEY_PAUSE
Rule 105   key -> RZKEY_INSERT
Rule 106   key -> RZKEY_HOME
Rule 107   key -> RZKEY_PAGEUP
Rule 108   key -> RZKEY_DELETE
Rule 109   key -> RZKEY_END
Rule 110   key -> RZKEY_PAGEDOWN
Rule 111   key -> RZKEY_UP
Rule 112   key -> RZKEY_LEFT
Rule 113   key -> RZKEY_DOWN
Rule 114   key -> RZKEY_RIGHT
Rule 115   key -> RZKEY_TAB
Rule 116   key -> RZKEY_CAPSLOCK
Rule 117   key -> RZKEY_BACKSPACE
Rule 118   key -> RZKEY_ENTER
Rule 119   key -> RZKEY_LCTRL
Rule 120   key -> RZKEY_LWIN
Rule 121   key -> RZKEY_LALT
Rule 122   key -> RZKEY_SPACE
Rule 123   key -> RZKEY_RALT
Rule 124   key -> RZKEY_FN
Rule 125   key -> RZKEY_RMENU
Rule 126   key -> RZKEY_RCTRL
Rule 127   key -> RZKEY_LSHIFT
Rule 128   key -> RZKEY_RSHIFT
Rule 129   key -> RZKEY_MACRO1
Rule 130   key -> RZKEY_MACRO2
Rule 131   key -> RZKEY_MACRO3
Rule 132   key -> RZKEY_MACRO4
Rule 133   key -> RZKEY_MACRO5
Rule 134   key -> RZKEY_OEM_1
Rule 135   key -> RZKEY_OEM_2
Rule 136   key -> RZKEY_OEM_3
Rule 137   key -> RZKEY_OEM_4
Rule 138   key -> RZKEY_OEM_5
Rule 139   key -> RZKEY_OEM_6
Rule 140   key -> RZKEY_OEM_7
Rule 141   key -> RZKEY_OEM_8
Rule 142   key -> RZKEY_OEM_9
Rule 143   key -> RZKEY_OEM_10
Rule 144   key -> RZKEY_OEM_11
Rule 145   key -> RZKEY_EUR_1
Rule 146   key -> RZKEY_EUR_2
Rule 147   key -> RZKEY_JPN_1
Rule 148   key -> RZKEY_JPN_2
Rule 149   key -> RZKEY_JPN_3
Rule 150   key -> RZKEY_JPN_4
Rule 151   key -> RZKEY_JPN_5
Rule 152   key -> RZKEY_KOR_1
Rule 153   key -> RZKEY_KOR_2
Rule 154   key -> RZKEY_KOR_3
Rule 155   key -> RZKEY_KOR_4
Rule 156   key -> RZKEY_KOR_5
Rule 157   key -> RZKEY_KOR_6
Rule 158   key -> RZKEY_KOR_7
Rule 159   playSequence -> ID NUMBER
Rule 160   playSequence -> ID NUMBER playSequence
Rule 161   colors -> color
Rule 162   colors -> color colors
Rule 163   color -> BLACK
Rule 164   color -> RED
Rule 165   color -> WHITE
Rule 166   color -> GREEN
Rule 167   color -> BLUE
Rule 168   color -> YELLOW
Rule 169   color -> PURPLE
Rule 170   color -> CYAN
Rule 171   color -> ORANGE
Rule 172   color -> PINK
Rule 173   color -> GREY
Rule 174   color -> rgbColor
Rule 175   rgbColor -> RGB LP NUMBER COMA NUMBER COMA NUMBER RP
Rule 176   reactType -> SHORT
Rule 177   reactType -> MEDIUM
Rule 178   reactType -> LONG
Rule 179   breatheType -> TWOCOLORS
Rule 180   breatheType -> RANDOM

Terminals, with rules where they appear

BLACK                : 163
BLINK                : 9 13
BLUE                 : 167
BOTTOM               : 36
BREATHE              : 17
COLON                : 1 1
COMA                 : 175 175
CUSTOM               : 11 15
CYAN                 : 170
GREEN                : 166
GREY                 : 173
ID                   : 2 3 159 160
KEYBOARD             : 7
L2R                  : 24
LONG                 : 178
LP                   : 175
MEDIUM               : 177
MIDDLE               : 35
MOUSE                : 6
NUMBER               : 21 21 22 29 159 160 175 175 175
ORANGE               : 171
PINK                 : 172
PURPLE               : 169
R2L                  : 25
RANDOM               : 180
REACT                : 18
RED                  : 164
RGB                  : 175
RP                   : 175
RZKEY_0              : 59
RZKEY_1              : 50
RZKEY_2              : 51
RZKEY_3              : 52
RZKEY_4              : 53
RZKEY_5              : 54
RZKEY_6              : 55
RZKEY_7              : 56
RZKEY_8              : 57
RZKEY_9              : 58
RZKEY_A              : 60
RZKEY_B              : 61
RZKEY_BACKSPACE      : 117
RZKEY_C              : 62
RZKEY_CAPSLOCK       : 116
RZKEY_D              : 63
RZKEY_DELETE         : 108
RZKEY_DOWN           : 113
RZKEY_E              : 64
RZKEY_END            : 109
RZKEY_ENTER          : 118
RZKEY_ESC            : 37
RZKEY_EUR_1          : 145
RZKEY_EUR_2          : 146
RZKEY_F              : 65
RZKEY_F1             : 38
RZKEY_F10            : 47
RZKEY_F11            : 48
RZKEY_F12            : 49
RZKEY_F2             : 39
RZKEY_F3             : 40
RZKEY_F4             : 41
RZKEY_F5             : 42
RZKEY_F6             : 43
RZKEY_F7             : 44
RZKEY_F8             : 45
RZKEY_F9             : 46
RZKEY_FN             : 124
RZKEY_G              : 66
RZKEY_H              : 67
RZKEY_HOME           : 106
RZKEY_I              : 68
RZKEY_INSERT         : 105
RZKEY_J              : 69
RZKEY_JPN_1          : 147
RZKEY_JPN_2          : 148
RZKEY_JPN_3          : 149
RZKEY_JPN_4          : 150
RZKEY_JPN_5          : 151
RZKEY_K              : 70
RZKEY_KOR_1          : 152
RZKEY_KOR_2          : 153
RZKEY_KOR_3          : 154
RZKEY_KOR_4          : 155
RZKEY_KOR_5          : 156
RZKEY_KOR_6          : 157
RZKEY_KOR_7          : 158
RZKEY_L              : 71
RZKEY_LALT           : 121
RZKEY_LCTRL          : 119
RZKEY_LEFT           : 112
RZKEY_LSHIFT         : 127
RZKEY_LWIN           : 120
RZKEY_M              : 72
RZKEY_MACRO1         : 129
RZKEY_MACRO2         : 130
RZKEY_MACRO3         : 131
RZKEY_MACRO4         : 132
RZKEY_MACRO5         : 133
RZKEY_N              : 73
RZKEY_NUMLOCK        : 86
RZKEY_NUMPAD         : 87
RZKEY_NUMPAD2        : 88
RZKEY_NUMPAD3        : 89
RZKEY_NUMPAD4        : 90
RZKEY_NUMPAD5        : 91
RZKEY_NUMPAD6        : 92
RZKEY_NUMPAD7        : 93
RZKEY_NUMPAD8        : 94
RZKEY_NUMPAD9        : 95
RZKEY_NUMPAD_ADD     : 99
RZKEY_NUMPAD_DECIMAL : 101
RZKEY_NUMPAD_DIVIDE  : 96
RZKEY_NUMPAD_ENTER   : 100
RZKEY_NUMPAD_MULTIPLY : 97
RZKEY_NUMPAD_SUBTRACT : 98
RZKEY_O              : 74
RZKEY_OEM_1          : 134
RZKEY_OEM_10         : 143
RZKEY_OEM_11         : 144
RZKEY_OEM_2          : 135
RZKEY_OEM_3          : 136
RZKEY_OEM_4          : 137
RZKEY_OEM_5          : 138
RZKEY_OEM_6          : 139
RZKEY_OEM_7          : 140
RZKEY_OEM_8          : 141
RZKEY_OEM_9          : 142
RZKEY_P              : 75
RZKEY_PAGEDOWN       : 110
RZKEY_PAGEUP         : 107
RZKEY_PAUSE          : 104
RZKEY_PRINTSCREEN    : 102
RZKEY_Q              : 76
RZKEY_R              : 77
RZKEY_RALT           : 123
RZKEY_RCTRL          : 126
RZKEY_RIGHT          : 114
RZKEY_RMENU          : 125
RZKEY_RSHIFT         : 128
RZKEY_S              : 78
RZKEY_SCROLL         : 103
RZKEY_SPACE          : 122
RZKEY_T              : 79
RZKEY_TAB            : 115
RZKEY_U              : 80
RZKEY_UP             : 111
RZKEY_V              : 81
RZKEY_W              : 82
RZKEY_X              : 83
RZKEY_Y              : 84
RZKEY_Z              : 85
SHORT                : 176
SPECTRUM             : 10 14
STARLIGHT            : 19
STATIC               : 8 12
TOP                  : 34
TWOCOLORS            : 179
WAVE                 : 16
WHITE                : 165
YELLOW               : 168
error                : 

Nonterminals, with rules where they appear

blinkArguments       : 9 13
breatheArguments     : 17
breatheType          : 26 27
color                : 20 28 29 30 31 32 33 161 162
colors               : 21 26 162
customKeyboardArguments : 15 33
customMouseArguments : 11 31
direction            : 23
effect               : 1 3
effectDevice         : 2 3
key                  : 32 33
keyboardEffect       : 5
keyboardEffectType   : 7
mouseEffect          : 4
mouseEffectType      : 6
playSequence         : 1 160
reactArguments       : 18
reactType            : 28
rgbColor             : 174
spectrumArguments    : 10 14
starlightArguments   : 19
start                : 0
staticArguments      : 8 12
waveArguments        : 16
zone                 : 30 31

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . effect COLON COLON playSequence
    (2) effect -> . ID effectDevice
    (3) effect -> . ID effectDevice effect

    ID              shift and go to state 3

    start                          shift and go to state 1
    effect                         shift and go to state 2

state 1

    (0) S' -> start .



state 2

    (1) start -> effect . COLON COLON playSequence

    COLON           shift and go to state 4


state 3

    (2) effect -> ID . effectDevice
    (3) effect -> ID . effectDevice effect
    (4) effectDevice -> . mouseEffect
    (5) effectDevice -> . keyboardEffect
    (6) mouseEffect -> . MOUSE mouseEffectType
    (7) keyboardEffect -> . KEYBOARD keyboardEffectType

    MOUSE           shift and go to state 8
    KEYBOARD        shift and go to state 9

    effectDevice                   shift and go to state 5
    mouseEffect                    shift and go to state 6
    keyboardEffect                 shift and go to state 7

state 4

    (1) start -> effect COLON . COLON playSequence

    COLON           shift and go to state 10


state 5

    (2) effect -> ID effectDevice .
    (3) effect -> ID effectDevice . effect
    (2) effect -> . ID effectDevice
    (3) effect -> . ID effectDevice effect

    COLON           reduce using rule 2 (effect -> ID effectDevice .)
    ID              shift and go to state 3

    effect                         shift and go to state 11

state 6

    (4) effectDevice -> mouseEffect .

    ID              reduce using rule 4 (effectDevice -> mouseEffect .)
    COLON           reduce using rule 4 (effectDevice -> mouseEffect .)


state 7

    (5) effectDevice -> keyboardEffect .

    ID              reduce using rule 5 (effectDevice -> keyboardEffect .)
    COLON           reduce using rule 5 (effectDevice -> keyboardEffect .)


state 8

    (6) mouseEffect -> MOUSE . mouseEffectType
    (8) mouseEffectType -> . STATIC staticArguments
    (9) mouseEffectType -> . BLINK blinkArguments
    (10) mouseEffectType -> . SPECTRUM spectrumArguments
    (11) mouseEffectType -> . CUSTOM customMouseArguments

    STATIC          shift and go to state 13
    BLINK           shift and go to state 14
    SPECTRUM        shift and go to state 15
    CUSTOM          shift and go to state 16

    mouseEffectType                shift and go to state 12

state 9

    (7) keyboardEffect -> KEYBOARD . keyboardEffectType
    (12) keyboardEffectType -> . STATIC staticArguments
    (13) keyboardEffectType -> . BLINK blinkArguments
    (14) keyboardEffectType -> . SPECTRUM spectrumArguments
    (15) keyboardEffectType -> . CUSTOM customKeyboardArguments
    (16) keyboardEffectType -> . WAVE waveArguments
    (17) keyboardEffectType -> . BREATHE breatheArguments
    (18) keyboardEffectType -> . REACT reactArguments
    (19) keyboardEffectType -> . STARLIGHT starlightArguments

    STATIC          shift and go to state 18
    BLINK           shift and go to state 19
    SPECTRUM        shift and go to state 20
    CUSTOM          shift and go to state 21
    WAVE            shift and go to state 22
    BREATHE         shift and go to state 23
    REACT           shift and go to state 24
    STARLIGHT       shift and go to state 25

    keyboardEffectType             shift and go to state 17

state 10

    (1) start -> effect COLON COLON . playSequence
    (159) playSequence -> . ID NUMBER
    (160) playSequence -> . ID NUMBER playSequence

    ID              shift and go to state 27

    playSequence                   shift and go to state 26

state 11

    (3) effect -> ID effectDevice effect .

    COLON           reduce using rule 3 (effect -> ID effectDevice effect .)


state 12

    (6) mouseEffect -> MOUSE mouseEffectType .

    ID              reduce using rule 6 (mouseEffect -> MOUSE mouseEffectType .)
    COLON           reduce using rule 6 (mouseEffect -> MOUSE mouseEffectType .)


state 13

    (8) mouseEffectType -> STATIC . staticArguments
    (20) staticArguments -> . color
    (163) color -> . BLACK
    (164) color -> . RED
    (165) color -> . WHITE
    (166) color -> . GREEN
    (167) color -> . BLUE
    (168) color -> . YELLOW
    (169) color -> . PURPLE
    (170) color -> . CYAN
    (171) color -> . ORANGE
    (172) color -> . PINK
    (173) color -> . GREY
    (174) color -> . rgbColor
    (175) rgbColor -> . RGB LP NUMBER COMA NUMBER COMA NUMBER RP

    BLACK           shift and go to state 30
    RED             shift and go to state 31
    WHITE           shift and go to state 32
    GREEN           shift and go to state 33
    BLUE            shift and go to state 34
    YELLOW          shift and go to state 35
    PURPLE          shift and go to state 36
    CYAN            shift and go to state 37
    ORANGE          shift and go to state 38
    PINK            shift and go to state 39
    GREY            shift and go to state 40
    RGB             shift and go to state 42

    staticArguments                shift and go to state 28
    color                          shift and go to state 29
    rgbColor                       shift and go to state 41

state 14

    (9) mouseEffectType -> BLINK . blinkArguments
    (21) blinkArguments -> . NUMBER NUMBER colors

    NUMBER          shift and go to state 44

    blinkArguments                 shift and go to state 43

state 15

    (10) mouseEffectType -> SPECTRUM . spectrumArguments
    (22) spectrumArguments -> . NUMBER

    NUMBER          shift and go to state 46

    spectrumArguments              shift and go to state 45

state 16

    (11) mouseEffectType -> CUSTOM . customMouseArguments
    (30) customMouseArguments -> . zone color
    (31) customMouseArguments -> . zone color customMouseArguments
    (34) zone -> . TOP
    (35) zone -> . MIDDLE
    (36) zone -> . BOTTOM

    TOP             shift and go to state 49
    MIDDLE          shift and go to state 50
    BOTTOM          shift and go to state 51

    customMouseArguments           shift and go to state 47
    zone                           shift and go to state 48

state 17

    (7) keyboardEffect -> KEYBOARD keyboardEffectType .

    ID              reduce using rule 7 (keyboardEffect -> KEYBOARD keyboardEffectType .)
    COLON           reduce using rule 7 (keyboardEffect -> KEYBOARD keyboardEffectType .)


state 18

    (12) keyboardEffectType -> STATIC . staticArguments
    (20) staticArguments -> . color
    (163) color -> . BLACK
    (164) color -> . RED
    (165) color -> . WHITE
    (166) color -> . GREEN
    (167) color -> . BLUE
    (168) color -> . YELLOW
    (169) color -> . PURPLE
    (170) color -> . CYAN
    (171) color -> . ORANGE
    (172) color -> . PINK
    (173) color -> . GREY
    (174) color -> . rgbColor
    (175) rgbColor -> . RGB LP NUMBER COMA NUMBER COMA NUMBER RP

    BLACK           shift and go to state 30
    RED             shift and go to state 31
    WHITE           shift and go to state 32
    GREEN           shift and go to state 33
    BLUE            shift and go to state 34
    YELLOW          shift and go to state 35
    PURPLE          shift and go to state 36
    CYAN            shift and go to state 37
    ORANGE          shift and go to state 38
    PINK            shift and go to state 39
    GREY            shift and go to state 40
    RGB             shift and go to state 42

    staticArguments                shift and go to state 52
    color                          shift and go to state 29
    rgbColor                       shift and go to state 41

state 19

    (13) keyboardEffectType -> BLINK . blinkArguments
    (21) blinkArguments -> . NUMBER NUMBER colors

    NUMBER          shift and go to state 44

    blinkArguments                 shift and go to state 53

state 20

    (14) keyboardEffectType -> SPECTRUM . spectrumArguments
    (22) spectrumArguments -> . NUMBER

    NUMBER          shift and go to state 46

    spectrumArguments              shift and go to state 54

state 21
